
buildscript {
  repositories {
    mavenCentral()
    jcenter()
    maven {
      url "https://plugins.gradle.org/m2/"
    }
  }
  dependencies {
    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
  }
}

plugins {
  id 'java'
  id 'groovy'
  id 'maven-publish'
}

def mavenUrl = System.getProperty("maven.url")
def mavenUser = System.getProperty("maven.user")
def mavenPwd = System.getProperty("maven.password")


subprojects {

  version = 0.66
  group = 'org.egripse'

  apply {
    plugin 'maven-publish'
    plugin 'java'
    plugin 'groovy'
  }

  repositories {
    mavenCentral()
    maven {
      url 'http://www.fornax-platform.org/m2/repository'
    }
  }

  dependencies {
    compile localGroovy()
    compile gradleApi()
    testCompile 'junit:junit:4.12'
    testCompile 'com.google.guava:guava:18.0'
    testCompile 'commons-io:commons-io:2.4'

  }

  sourceCompatibility = 1.8

  //create org.eclipse.equinox.simpleconfigurator jar
  tasks.create('sourceJar', Jar) {
    from sourceSets.main.allJava
  }

  //publish the additional org.eclipse.equinox.simpleconfigurator jar
  publishing {
    repositories {
      maven {
        credentials {
          username mavenUser
          password mavenPwd
        }
        url mavenUrl
      }
    }
    publications {
      myPublication(MavenPublication) {
        from components.java

        artifact project.sourceJar {
          classifier 'sources'
        }
      }
    }
  }


  task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
  }

  artifacts {
    archives sourcesJar
  }

  // Tests in package integration are only called in task integrationtest and tests in
  // package reallife are called in task reallifetest
  test {
    exclude "**/integrationtest/**"
  }

  task integrationtest(type: Test) {
    dependsOn project.tasks.publishToMavenLocal
    include "**/integrationtest/**"
    jvmArgs "-XX:MaxPermSize=128m"
  }

  dependencies {
    compile gradleApi()
    compile localGroovy()
  }

  //Deploy on bintray
  apply {
    plugin 'com.jfrog.bintray'
  }
  bintray {
    user = System.properties['bintray.username']
    key = System.properties['bintray.password']
    publications = ['myPublication']
    pkg {
      repo = 'egripse'
      name = "${project.name}"
      desc = 'gradle plugins to build eclipse bundles and features'
      websiteUrl = 'https://github.com/moley/egripse'
      issueTrackerUrl = 'https://github.com/moley/egripse'
      vcsUrl = 'https://github.com/moley/egripse.git'
      licenses = ['Apache-2.0']
      labels = ['eclipse', 'gradle', 'gorilla']
      attributes= ['plat': ['win', 'linux', 'osx']]
      publicDownloadNumbers = true
      version.attributes = [ 'gradle-plugin': "org.egripse.${project.name}:org.egripse:${project.name}" ]
    }
  }

}

allprojects {
  version = project.rootProject.file('releasenotes.md').text.split("\n").first().replaceAll("\\*", "")
}

println "Using repo url " + mavenUrl + " with user " + mavenUser + " and version " + version

task release {
}
